refactor : correction des avertissements